--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,11 +1,6 @@
 @()(implicit messages: Messages)
 
-<html>
-<head>
-    <title>Post a message!</title>
-    <link rel='stylesheet' href='@routes.Assets.at("/stylesheets/app.css")'>
-</head>
-<body>
+@main {
 
 <h1>Post a message!</h1>
 
@@ -71,9 +66,4 @@
     Provide post ID which you want to retrieve: <input type="text" id="postId"> <input type="submit" class="buttons" value="Search" id="searchButton">
     <br/>
 </div>
-
-
-<script src='@routes.Assets.at("/javascripts/app.js")'></script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
-</body>
-</html>
+}
