Changing text input to a textarea

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -30,7 +30,8 @@
         <div class="col-lg-4 col-sm-12 col-md-12">
             @helper.form(action = routes.AppController.postMessage) {
             @helper.CSRF.formField
-            @helper.inputText(ttsForm("text"),
+            @helper.textarea(ttsForm("text"),
+            'rows -> "3",
             'id -> "input-text",
             'class -> ttsForm("text").error.map(_ => "form-control is-invalid").getOrElse("form-control"))
             @helper.select(ttsForm("voice"),
