Supporting multiple languages

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,11 +6,11 @@
 
 <div class="container-fluid">
 
-    <h1>Post a message!</h1>
+    <h1>@messages("site.title")</h1>
 
     @flash.get("success").map { message =>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-        @message
+        @messages(message)
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -19,7 +19,7 @@
 
     @flash.get("error").map { errorMessage =>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        @errorMessage
+        @messages(errorMessage)
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -30,15 +30,15 @@
         <div class="col-lg-4 col-sm-12 col-md-12">
             @helper.form(action = routes.AppController.postMessage) {
             @helper.CSRF.formField
-            @helper.textarea(ttsForm("text"),
+            @helper.textarea(ttsForm("tts.text"),
             'rows -> "3",
             'id -> "input-text",
-            'class -> ttsForm("text").error.map(_ => "form-control is-invalid").getOrElse("form-control"))
-            @helper.select(ttsForm("voice"),
+            'class -> ttsForm("tts.text").error.map(_ => "form-control is-invalid").getOrElse("form-control"))
+            @helper.select(ttsForm("tts.voice"),
             voices,
             'id -> "input-voice",
-            'class -> ttsForm("voice").error.map(_ => "form-control is-invalid").getOrElse("form-control"))
-            <button id="btn-submit" type="submit" class="btn btn-primary btn-block">Submit</button>
+            'class -> ttsForm("tts.voice").error.map(_ => "form-control is-invalid").getOrElse("form-control"))
+            <button id="btn-submit" type="submit" class="btn btn-primary btn-block">@messages("tts.submit")</button>
             }
         </div>
     </div>
