--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,6 @@
-@(content: Html)(implicit messages: Messages, request: RequestHeader)
+@import config.AppConfig
+
+@(content: Html)(implicit appConfig: AppConfig, messages: Messages, request: RequestHeader)
 
 <html>
 <head>
@@ -9,6 +11,11 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">POST</a>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="btn btn-outline-success" href="https://id.twitch.tv/oauth2/authorize?response_type=code&client_id=@{appConfig.clientId}&redirect_uri=@{appConfig.redirectUri}&scope=openid">Sign in</a>
+        </li>
+    </ul>
 </nav>
 
 @content
